--- a/index.html
+++ b/index.html
@@ -1,10 +1,104 @@
 <!doctype html>
+
+<style>	
+	table, th, td {	
+		border: 1px solid black;
+		
+	}
+	
+	.red {
+		color: red;
+	}
+	
+	#blue {
+		color: blue;
+	}
+	
+	div {
+		background-color: aqua;
+	}
+	
+	body {
+		background-color: darkgray;
+	}
+		
+</style>
+
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>helloo</title>
 </head>
-hi
+
+	
 <body>
+
+	<h1>helloo</h1>
+	<h1 class="red">helloo</h1>
+	<h1 id="blue">helloo</h1>
+	<h3>helloo</h3>
+	<h6>helloo</h6>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/8ZitouI21GM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<hr>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <strong>Recusandae dolorum expedita animi</strong>, enim quia, asperiores, nobis consequatur quae nam quam praesentium, <b>doloribus quibusdam reiciendis!</b> <br> Consequatur, aspernatur, tempora. <i>helloo</i> Laboriosam porro autem ipsum eligendi <em>helloo</em> veritatis rem maxime voluptatum delectus, labore distinctio vero iusto tempore maiores cum reiciendis velit unde, eaque amet doloribus!</p>
+	
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam fuga alias vel consequatur obcaecati praesentium dolores, repellat quibusdam voluptates eaque possimus quas unde, perferendis velit temporibus ipsum, neque inventore odio sed. Aliquam quisquam natus, facere. Quibusdam consequatur aliquam, explicabo ipsa laudantium aspernatur vel? <br> Aliquam rerum libero asperiores iure ducimus neque debitis autem, odit laudantium consectetur facere quibusdam iusto sequi, fuga. Excepturi corporis in libero inventore eos qui minus. Delectus voluptas a odio consequuntur amet voluptate doloremque ex sint fuga accusamus, excepturi nostrum ipsum vel omnis nemo velit reiciendis ipsa porro, alias aut blanditiis molestias dolores neque nam. Tempore, nam, fugit.</p>
+	
+	<p>5<sup>2</sup></p>
+	<p>H<sub>2</sub>O</p>
+	
+	
+	<div>
+	<ol>
+		<li>hej</li>
+		<li>hej hej</li>
+	</ol>
+		
+	</div>
+	
+	<ul><li>hej</li>
+		<li>hej hej</li>
+	</ul>
+	
+	<table>
+		
+		<tr>
+		
+			<th>helloo</th>
+			<td colspan="2" style="border: 1px solid black">helloo</td>
+		</tr>
+		<tr>
+		
+			<th style="border: 1px solid black; color: green;">helloo</th>
+			<td style="border: 1px solid black">helloo</td>
+			<td style="border: 1px solid black">helloo</td>
+		</tr>
+	</table>
+	
+	<br> <br>
+	
+	<form>	
+		<label>Fornavn</label> <input type="text" value="gustavo">
+		<label>Efternavn</label> <input type="text" value="sus">
+		<br> <br>
+		<p> vælg din heirloom</p>
+		<input type="radio"> <label>MMD</label>
+		<input type="radio"> <label>DAT</label>
+		<br> <br>
+		<input type="checkbox"> <label>Jeg er ikke af nummer 2 Hr. Komst</label>
+		<br> <br>
+		<input type="submit" value="send">
+	
+	</form>
+	
+	<a href="https://www.google.dk/"> Tryk på mig</a>
+	<a href="https://www.google.dk/" target="_blank"> Tryk på mig</a>
+	
+	<img src="file:///C|/Users/emanu/OneDrive/Dokumenter/GitHub/testgithub/Klunkrekrigere logo.png" width="49" height="42" alt="Gemen gulerod"/>
+	
+	<a href ="mailto:emanuelsquillante@hotmail.com">Send mig en mail</a>
+	<a href=tel:"12345678">Ring til mig</a>
+	<a href="#blue">link</a>
+	
 </body>
 </html>
