--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <meta charset="utf-8">
 <title>helloo</title>
 <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://use.typekit.net/rhe8pbh.css">
 </head>
 
 	
