--- a/responsive.html
+++ b/responsive.html
@@ -3,8 +3,32 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
+	<link rel="stylesheet" href="res_style.css">
 </head>
 
 <body>
+	<div class="a"></div>
+	<div class="b"></div>
+	<div class="c"></div>
+	<div class="d"></div>
+	
+	<section class="flexbox">
+		<p>1</p>
+		<p>2</p>
+		<p>3</p>
+		<p>4</p>
+		<p>5</p>
+		<p>6</p>
+	</section>
+	
+	<section class="grid">
+		<p class="grid-a">1</p>
+		<p>2</p>
+		<p>3</p>
+		<p>4</p>
+		<p>5</p>
+		<p>6</p>
+	</section>
+	
 </body>
 </html>
